fix: Update overflow and minimum height properties for tab panes and containers

--- a/less/documentDBFabric.less
+++ b/less/documentDBFabric.less
@@ -7,7 +7,6 @@ html {
 body {
   font-family: @FabricFont;
   background-color: #f5f5f5;
-  overflow: auto;
 }
 
 a {
@@ -23,14 +22,6 @@ a:focus {
 
 .splashLoaderContainer {
   background-color: #f5f5f5;
-}
-
-.flexContainer {
-  min-height: 700px;
-}
-
-.sidebarContainer {
-  min-height: 500px;
 }
 
 #divExplorer {
@@ -219,4 +210,13 @@ a:focus {
 
 .fileImportImg img {
   filter: brightness(0) saturate(100%);
+}
+
+.tabPanesContainer {
+  overflow: auto !important;
+}
+
+.tabs-container {
+  min-height: 500px;
+  min-width: 500px;
 }
